[package]
name = "cmd-cat"
version = "0.1.0"
edition = "2021"

description = "Command line tool to analyze entered commands."
license = "MIT" 

authors = ["Sahriar Nur Nahin <sahriarnurnahin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
inquire = "0.6.2"
termion = "2.0.1"
rustyline = "11.0.0"
